--- a/pi_hole/docker-compose.yml
+++ b/pi_hole/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       - "53:53/tcp"
       - "53:53/udp"
       - "67:67/udp"
-      - "80:80/tcp"
     environment:
       TZ: 'Europe/Berlin'
       WEBPASSWORD: 'admin'
@@ -21,4 +20,10 @@ services:
     #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
     cap_add:
       - NET_ADMIN
-    restart: unless-stopped
+    restart: always
+    networks:
+      - management_v_hosts
+
+networks:
+  management_v_hosts:
+    external: true
